Fin de la rédaction de l'exercice1 du sujet 2024

--- a/1erTourBacL2024.tex
+++ b/1erTourBacL2024.tex
@@ -39,18 +39,29 @@
 \textbf{{\underline{\textcolor{red}{Premier Groupe}}}}
 \end{center}
 
-\section*{\textcolor{red}{\underline{Exercice 1} (6 points) :}}
+\section*{\textcolor{red}{\underline{Exercice 1} (4 points) :}}
 Pour chaque item choisir la bonne réponse dans la colonne de droite, sachant qu'une seule réponse est correcte.
 
-Chaque bonne reponse rapporte \textbf{ 01 point}.
+Chaque bonne reponse rapporte \textbf{( 01 point)}.
 
 \begin{tabular}{|c|c|}
 \hline
-\textbf{ITEMS}  & \textbf{REPONSES}\\
+\textbf{ITEMS} & \textbf{REPONSES}\\
 \hline
-1. Si les fonctions $f$ et $g$ sont dfinies par $f(x)=\sqrt{x^{2}-9}$ et $g(x)=\frac{x+3}{x-1}$, alors: &
-\makecell{a.$(g\circ f)(2)=4$\\ b.$(f\circ g)(3)=-3$\\c.$(g\circ f)(3)=-3$}\\
+\makecell[l]{\textbf{1.} Si les fonctions $f$ et $g$ sont définies par \\ $f(x)=\sqrt{x^{2}-9}$ et $g(x)=\frac{x+3}{x-1}$, alors:} &
+\makecell[l]{\textbf{a.} $(g\circ f)(2)=4$ \\ \textbf{b.} $(f\circ g)(3)=-3$ \\ \textbf{c.} $(g\circ f)(3)=-3$}\\
+\hline
+\makecell[l]{\textbf{2.} Si la fonction $f$ est définie par \\ $f(x)=\frac{e^{x}}{1+e^{x}}$, alors:} &
+\makecell[l]{\textbf{a.} La dérivée de $f$ est $f'(x)=\left(\frac{1}{1+e^{x}}\right)^{2}$ \\ \textbf{b.} Une primitive de $f$ sur $\mathbb{R}$ est\\ $F(x)=\ln(1+e^{x})$ \\ \textbf{c.} $f$ est définie sur $\mathbb{R}\setminus\left\lbrace -1\right\rbrace $}\\ 
+\hline
+\makecell[l]{\textbf{3.} Une radio a commencé à émettre en l'an $2000$\\ avec $5000$ auditeurs. Chaque année elle perd \\ $20\%$ de ses auditeurs, mais elle en accueille $4000$\\ nouveaux. Soit $U_{n}$ le nombre d'auditeurs de la\\ radio en  l'an $2000+n$: } & \makecell[l]{\textbf{a.} $U_{n+1}=0,8U_{n}+4000$. \\ 
+\textbf{b.} $U_{n+1}=0,2U_{n}+4000$. \\ \textbf{c.} $U_{n+1}=0,8U_{n}+5000$. }\\
+\hline
+\makecell[l]{\textbf{3.} On choisit au hasard, successivement et sans\\ remises $3$ jetons d'une caisse qui contient 1 jeton\\ vert, 2 jetons jaunes et 3 jetons rouges.\\ La proabilité de tirer 3 jetons de couleurs différentes est:} & 
+\makecell[l]{\textbf{a.} $\frac{1}{20}$. \\ 
+\textbf{b.} $\frac{3}{10}$. \\ \textbf{c.} $\frac{ A_{1}^{1}\times A_{2}^{1}\times A_{3}^{1}}{ A_{6}^{3} }$. }\\
 \hline
 \end{tabular}
+
 
 \end{document}
