Rédaction de l'exercice 2

--- a/1erTourBacL2024.tex
+++ b/1erTourBacL2024.tex
@@ -62,6 +62,33 @@ Chaque bonne reponse rapporte \textbf{( 01 point)}.
 \textbf{b.} $\frac{3}{10}$. \\ \textbf{c.} $\frac{ A_{1}^{1}\times A_{2}^{1}\times A_{3}^{1}}{ A_{6}^{3} }$. }\\
 \hline
 \end{tabular}
-
+\section*{\textcolor{red}{\underline{Exercice 1} (6 points) :}}
+\begin{enumerate}
+\item Résoudre dans $\mathbb{R}$:
+	\begin{enumerate}
+	\item L'équation $\ln(2x+1)+\ln(x-1)=\ln2$. \textbf{(01,5 point)}
+	\item L'inéquation $e^{2x}-3e^{x}-4 \leq 0$. \textbf{(01 point)}
+	\end{enumerate}
+\item \[ \text{Résoudre dans } \mathbb{R}^{2} \text{ le système }
+\begin{cases}
+\ln x + \ln y = \ln 2\\
+e^{x}\times e^{y}=e^{3}
+\end{cases}  \textbf{(01,5 point)}\]
+\item Résoudre dans $\mathbb{R}^{3}$ :
+\begin{enumerate}
+\item \[ \text{Le système }
+\begin{cases}
+x-y+z = -2\\
+2x+y-2z = 6\\
+x-3y-z=-4
+\end{cases}  \textbf{(01 point)}\]
+\item \[ \text{En déduire la résolution du système }
+\begin{cases}
+\ln x-\ln y+\ln z = -2\\
+\ln x^{2}+\ln y-\ln z^{2} = 6\\
+\ln x-\ln y^{3}-\ln z=-4
+\end{cases}  \textbf{(01 point)}\]
+\end{enumerate}
+\end{enumerate}
 
 \end{document}
