correction d'une petite erreur

--- a/1erTourBacL2024.tex
+++ b/1erTourBacL2024.tex
@@ -52,7 +52,7 @@ Chaque bonne reponse rapporte \textbf{( 01 point)}.
 \makecell[l]{\textbf{a.} $(g\circ f)(2)=4$ \\ \textbf{b.} $(f\circ g)(3)=-3$ \\ \textbf{c.} $(g\circ f)(3)=-3$}\\
 \hline
 \makecell[l]{\textbf{2.} Si la fonction $f$ est définie par \\ $f(x)=\frac{e^{x}}{1+e^{x}}$, alors:} &
-\makecell[l]{\textbf{a.} La dérivée de $f$ est $f'(x)=\left(\frac{1}{1+e^{x}}\right)^{2}$ \\ \textbf{b.} Une primitive de $f$ sur $\mathbb{R}$ est\\ $F(x)=\ln(1+e^{x})$ \\ \textbf{c.} $f$ est définie sur $\mathbb{R}\setminus\left\lbrace -1\right\rbrace $}\\ 
+\makecell[l]{\textbf{a.} La dérivée de $f$ est $f'(x)=\frac{1}{\left(1+e^{x}\right)^{2}}$ \\ \textbf{b.} Une primitive de $f$ sur $\mathbb{R}$ est\\ $F(x)=\ln(1+e^{x})$ \\ \textbf{c.} $f$ est définie sur $\mathbb{R}\setminus\left\lbrace -1\right\rbrace $}\\ 
 \hline
 \makecell[l]{\textbf{3.} Une radio a commencé à émettre en l'an $2000$\\ avec $5000$ auditeurs. Chaque année elle perd \\ $20\%$ de ses auditeurs, mais elle en accueille $4000$\\ nouveaux. Soit $U_{n}$ le nombre d'auditeurs de la\\ radio en  l'an $2000+n$: } & \makecell[l]{\textbf{a.} $U_{n+1}=0,8U_{n}+4000$. \\ 
 \textbf{b.} $U_{n+1}=0,2U_{n}+4000$. \\ \textbf{c.} $U_{n+1}=0,8U_{n}+5000$. }\\
@@ -110,7 +110,7 @@ Soit la fonction numérique $f$ de la variable réelle $x$, définie par $f(x)=\
 \item Soit  la fonction F définie par $F(x)=\frac{1}{2}(\ln x)^{2}+\ln x.$
 \begin{itemize}
 \item[a.] Montrer que $F$ est une primitive de $f$ dans $]0; +\infty[$ \textbf{(01 point)}
-\item[b.] Calculer en $cm^{2}$ l'aire $\mathscr{A}$ du domaine plan délimité par la courbe $(\mathscr{Cf})$, l'axe des abscisses, ainsi que les droites $D_{1}: x=1$ et $D_{2}: x=e$. \textbf{(01 point)}
+\item[b.] Calculer en $cm^{2}$ l'aire $\mathscr{A}$ du domaine plan délimité par la courbe $(\mathscr{Cf})$, l'axe des abscisses, ainsi que les droites $(D_{1}): x=1$ et $(D_{2}): x=e$. \textbf{(01 point)}
 \end{itemize}
 \end{enumerate}
 \end{document}
