--- a/1erTourBacL2024Correction.tex
+++ b/1erTourBacL2024Correction.tex
@@ -50,7 +50,7 @@ Chaque bonne réponse rapporte \textbf{( 01 point)}.
 \makecell[l]{\textbf{a.} $(g\circ f)(2)=4$ \\ \textbf{b.} $(f\circ g)(3)=-3$ \\ \textbf{c.} $(g\circ f)(3)=-3$}\\
 \hline
 \makecell[l]{\textbf{2.} Si la fonction $f$ est définie par \\ $f(x)=\frac{e^{x}}{1+e^{x}}$, alors:} &
-\makecell[l]{\textbf{a.} La dérivée de $f$ est $f'(x)=\left(\frac{1}{1+e^{x}}\right)^{2}$ \\ \textbf{b.} Une primitive de $f$ sur $\mathbb{R}$ est\\ $F(x)=\ln(1+e^{x})$ \\ \textbf{c.} $f$ est définie sur $\mathbb{R}\setminus\left\lbrace -1\right\rbrace $}\\ 
+\makecell[l]{\textbf{a.} La dérivée de $f$ est $f'(x)=\frac{1}{\left(1+e^{x}\right)^{2}}$ \\ \textbf{b.} Une primitive de $f$ sur $\mathbb{R}$ est\\ $F(x)=\ln(1+e^{x})$ \\ \textbf{c.} $f$ est définie sur $\mathbb{R}\setminus\left\lbrace -1\right\rbrace $}\\ 
 \hline
 \makecell[l]{\textbf{3.} Une radio a commencé à émettre en l'an $2000$\\ avec $5000$ auditeurs. Chaque année elle perd \\ $20\%$ de ses auditeurs, mais elle en accueille $4000$\\ nouveaux. Soit $U_{n}$ le nombre d'auditeurs de la\\ radio en  l'an $2000+n$: } & \makecell[l]{\textbf{a.} $U_{n+1}=0,8U_{n}+4000$. \\ 
 \textbf{b.} $U_{n+1}=0,2U_{n}+4000$. \\ \textbf{c.} $U_{n+1}=0,8U_{n}+5000$. }\\
@@ -59,10 +59,8 @@ Chaque bonne réponse rapporte \textbf{( 01 point)}.
 \makecell[l]{\textbf{a.} $\frac{1}{20}$. \\ 
 \textbf{b.} $\frac{3}{10}$. \\ \textbf{c.} $\frac{ A_{1}^{1}\times A_{2}^{1}\times A_{3}^{1}}{ A_{6}^{3} }$. }\\
 \hline
-\end{tabular}
-%\section*{\textcolor{green}{\underline{Correction Exercice 2} (6 points) :}}
+\end{tabular}\\
 
-%\section*{\textcolor{green}{\underline{Problème (10 points):}}}
 \textcolor{green}{\textbf{1.} Si les fonctions $f$ et $g$ sont définies par  $f(x)=\sqrt{x^{2}-9}$ et $g(x)=\frac{x+3}{x-1}$, alors:}
 
 \textbf{a.} $(g\circ f)(2)=4$
@@ -90,5 +88,27 @@ f(3)=\sqrt{3^{2}-9}=0\\
 g(f(3))=g(0)=-3 \text{ C'est une bonne réponse }
 \end{cases}
 \]
-Donc la bonne réponse est \textcolor{green}{\textbf{c.} $(g\circ f)(3)=-3$}
+
+Donc la bonne réponse est \textcolor{green}{\textbf{c.} $(g\circ f)(3)=-3$}\\
+
+\textcolor{green}{ \textbf{2.} Si la fonction $f$ est définie par $f(x)=\frac{e^{x}}{1+e^{x}}$, alors: }
+\newpage
+\textbf{a.} La dérivée de $f$ est $f'(x)=\frac{1}{\left(1+e^{x}\right)^{2}}$
+
+\[
+f'(x)=\frac{e^{x}}{1+e^{x}}=\frac{(e^{x})'(1+e^{x})-(1+e^{x})'(e^{x})}{\left( 1+e^{x} \right)^{2}  }=\frac{(e^{x}+e^{2x})-e^{2x}}{\left( 1+e^{x} \right)^{2}}=\frac{e^{x}}{\left( 1+e^{x} \right)^{2}}
+\]
+\[f'(x)=\frac{e^{x}}{\left( 1+e^{x} \right)^{2}} \text{\textcolor{green} {C'est une bonne réponse }}\]
+\textbf{b.} Une primitive de $f$ sur $\mathbb{R}$ est
+
+$F(x)=\ln(1+e^{x})$
+\[\text{ Vérifions si } F'(x)=f(x) \text{ en effet } F'(x)=\frac{e^{x}}{1+e^{x}} \text{ donc } F(x) \text{ est bien la primitive de } f. \]
+\[\text{\textcolor{green} {C'est une bonne réponse }}\]
+\textbf{c.} $f$ est définie sur $\mathbb{R}\setminus\left\lbrace -1\right\rbrace $
+\[\text{\textcolor{green} {Trivial: C'est pas une bonne réponse }}\]
+
+Donc les bonnes réponses sont \textcolor{green}{\textbf{a}, \textbf{b}}\\
+%\section*{\textcolor{green}{\underline{Correction Exercice 2} (6 points) :}}
+
+%\section*{\textcolor{green}{\underline{Problème (10 points):}}}
 \end{document}
