Correction de l'exercice 1 troisième ligne

--- a/1erTourBacL2024Correction.tex
+++ b/1erTourBacL2024Correction.tex
@@ -55,7 +55,7 @@ Chaque bonne réponse rapporte \textbf{( 01 point)}.
 \makecell[l]{\textbf{3.} Une radio a commencé à émettre en l'an $2000$\\ avec $5000$ auditeurs. Chaque année elle perd \\ $20\%$ de ses auditeurs, mais elle en accueille $4000$\\ nouveaux. Soit $U_{n}$ le nombre d'auditeurs de la\\ radio en  l'an $2000+n$: } & \makecell[l]{\textbf{a.} $U_{n+1}=0,8U_{n}+4000$. \\ 
 \textbf{b.} $U_{n+1}=0,2U_{n}+4000$. \\ \textbf{c.} $U_{n+1}=0,8U_{n}+5000$. }\\
 \hline
-\makecell[l]{\textbf{3.} On choisit au hasard, successivement et sans\\ remises $3$ jetons d'une caisse qui contient 1 jeton\\ vert, 2 jetons jaunes et 3 jetons rouges.\\ La proabilité de tirer 3 jetons de couleurs différentes est:} & 
+\makecell[l]{\textbf{4.} On choisit au hasard, successivement et sans\\ remises $3$ jetons d'une caisse qui contient 1 jeton\\ vert, 2 jetons jaunes et 3 jetons rouges.\\ La proabilité de tirer 3 jetons de couleurs différentes est:} & 
 \makecell[l]{\textbf{a.} $\frac{1}{20}$. \\ 
 \textbf{b.} $\frac{3}{10}$. \\ \textbf{c.} $\frac{ A_{1}^{1}\times A_{2}^{1}\times A_{3}^{1}}{ A_{6}^{3} }$. }\\
 \hline
@@ -108,6 +108,29 @@ $F(x)=\ln(1+e^{x})$
 \[\text{\textcolor{green} {Trivial: C'est pas une bonne réponse }}\]
 
 Donc les bonnes réponses sont \textcolor{green}{\textbf{a}, \textbf{b}}\\
+
+\textcolor{green}{\textbf{3.} Une radio a commencé à émettre en l'an $2000$ avec $5000$ auditeurs. Chaque année elle perd  $20\%$ de ses auditeurs, mais elle en accueille $4000$ nouveaux. Soit $U_{n}$ le nombre d'auditeurs de la radio en  l'an $2000+n$:} 
+
+\textbf{a.} $U_{n+1}=0,8U_{n}+4000$.
+ 
+\textbf{b.} $U_{n+1}=0,2U_{n}+4000$.
+
+\textbf{c.} $U_{n+1}=0,8U_{n}+5000$.
+
+\textcolor{green}{\textbf{4.} On choisit au hasard, successivement et sans remises $3$ jetons d'une caisse qui contient 1 jeton vert, 2 jetons jaunes et 3 jetons rouges. La proabilité de tirer 3 jetons de couleurs différentes est:}
+
+\textbf{a.} $\frac{1}{20}$.
+
+\[\text{\textcolor{green} {C'est une bonne réponse car une simplification de \textbf{c.} }}\]
+
+\textbf{b.} $\frac{3}{10}$.
+
+ \[\text{\textcolor{green} { C'est pas une bonne réponse }}\]
+
+\textbf{c.} $\frac{ A_{1}^{1}\times A_{2}^{1}\times A_{3}^{1}}{ A_{6}^{3} }$.
+
+\[\text{\textcolor{green} {C'est la prémière bonne réponse }}\]
+ 
 %\section*{\textcolor{green}{\underline{Correction Exercice 2} (6 points) :}}
 
 %\section*{\textcolor{green}{\underline{Problème (10 points):}}}
