--- a/1erTourBacL2024Correction.tex
+++ b/1erTourBacL2024Correction.tex
@@ -164,7 +164,57 @@ $U_{n+1}=0,8\times U_{n}+4000$ et un terme constant +4000.
 
 \[\text{\textcolor{green} {C'est la prémière bonne réponse }}\]
  
-%\section*{\textcolor{green}{\underline{Correction Exercice 2} (6 points) :}}
+\section*{\textcolor{green}{\underline{Correction Exercice 2} (6 points) :}}
+\begin{enumerate}
+\item Résolvons dans $\mathbb{R}$:
+	\begin{enumerate}
+	\item L'équation $\ln(2x+1)+\ln(x-1)=\ln2$. \textbf{(01,5 point)}
+	
+	\textbf{\underline{Domaine de validité $Dv$ :} }
+	
+		L'équation n'a de sens que ssi $2x+1>0$ et $x-1>0$
+		
+			$2x+1>0$ et $x-1>0\implies x>\frac{-1}{2}$ et $x>1\implies x\in ]1;+\infty[$
 
+			Donc \textcolor{green} {$Dv=]1;+\infty[$}
+			
+	\textbf{\underline{Résolution}} 
+	
+	\[\ln(2x+1)+\ln(x-1)=\ln2\implies \ln\left[(2x+1)(x-1)\right]=\ln2\implies \ln\left[2x^{2}-x-1\right]=\ln2\]
+	\[2x^{2}-x-1=2\implies 2x^{2}-x-3=0\]
+	\[\text{Cherchons }\Delta.\]
+	\[\Delta=25\]
+	\[x_{1}=\frac{3}{2} \text{ ; } x_{2}=-1\]
+	\[\text{A-t-on } x_{1} \in ]1;+\infty[ \text{ ; } x_{2} \in ]1;+\infty[ \text{ ? }\]
+	
+\[\text{Pour }	x_{1} \in ]1;+\infty[ \Leftrightarrow \frac{3}{2} \in ]1;+\infty[ \text{\textcolor{green} { Vrai } }\]
+
+\[\text{Pour }	x_{2} \in ]1;+\infty[ \Leftrightarrow -1 \in ]1;+\infty[ \text{\textcolor{green} { Faux } }\]
+
+\[\textcolor{green}{\boxed{S=\left\lbrace \frac{3}{2} \right\rbrace}}\]
+
+	%\item L'inéquation $e^{2x}-3e^{x}-4 \leq 0$. \textbf{(01 point)}
+	\end{enumerate}
+%\item \[ \text{Résoudre dans } \mathbb{R}^{2} \text{ le système }
+%\begin{cases}
+%\ln x + \ln y = \ln 2\\
+%e^{x}\times e^{y}=e^{3}
+%\end{cases}  \textbf{(01,5 point)}\]
+%\item Résoudre dans $\mathbb{R}^{3}$ :
+%\begin{enumerate}
+%\item \[ \text{Le système }
+%\begin{cases}
+%x-y+z = -2\\
+%2x+y-2z = 6\\
+%x-3y-z=-4
+%\end{cases}  \textbf{(01 point)}\]
+%\item \[ \text{En déduire la résolution du système }
+%\begin{cases}
+%\ln x-\ln y+\ln z = -2\\
+%\ln x^{2}+\ln y-\ln z^{2} = 6\\
+%\ln x-\ln y^{3}-\ln z=-4
+%\end{cases}  \textbf{(01 point)}\]
+%\end{enumerate}
+\end{enumerate}
 %\section*{\textcolor{green}{\underline{Problème (10 points):}}}
 \end{document}
