Résolution de l'inéquation. Je me demande comment un élève de L vas y arrivé. Je dois aller chercher la partie du programme qui en parle

--- a/1erTourBacL2024Correction.tex
+++ b/1erTourBacL2024Correction.tex
@@ -180,12 +180,12 @@ $U_{n+1}=0,8\times U_{n}+4000$ et un terme constant +4000.
 			
 	\textbf{\underline{Résolution}} 
 	
-	\[\ln(2x+1)+\ln(x-1)=\ln2\implies \ln\left[(2x+1)(x-1)\right]=\ln2\implies \ln\left[2x^{2}-x-1\right]=\ln2\]
-	\[2x^{2}-x-1=2\implies 2x^{2}-x-3=0\]
-	\[\text{Cherchons }\Delta.\]
-	\[\Delta=25\]
-	\[x_{1}=\frac{3}{2} \text{ ; } x_{2}=-1\]
-	\[\text{A-t-on } x_{1} \in ]1;+\infty[ \text{ ; } x_{2} \in ]1;+\infty[ \text{ ? }\]
+\[\ln(2x+1)+\ln(x-1)=\ln2\implies \ln\left[(2x+1)(x-1)\right]=\ln2\implies \ln\left[2x^{2}-x-1\right]=\ln2\]
+\[2x^{2}-x-1=2\implies 2x^{2}-x-3=0\]
+\[\text{Cherchons }\Delta.\]
+\[\Delta=25\]
+\[x_{1}=\frac{3}{2} \text{ ; } x_{2}=-1\]
+\[\text{A-t-on } x_{1} \in ]1;+\infty[ \text{ ; } x_{2} \in ]1;+\infty[ \text{ ? }\]
 	
 \[\text{Pour }	x_{1} \in ]1;+\infty[ \Leftrightarrow \frac{3}{2} \in ]1;+\infty[ \text{\textcolor{green} { Vrai } }\]
 
@@ -193,8 +193,19 @@ $U_{n+1}=0,8\times U_{n}+4000$ et un terme constant +4000.
 
 \[\textcolor{green}{\boxed{S=\left\lbrace \frac{3}{2} \right\rbrace}}\]
 
-	%\item L'inéquation $e^{2x}-3e^{x}-4 \leq 0$. \textbf{(01 point)}
-	\end{enumerate}
+\item L'inéquation $e^{2x}-3e^{x}-4 \leq 0$. \textbf{(01 point)}
+\[e^{2x}-3e^{x}-4 \leq 0\]
+\[\text{Posons X=}e^{x} \]
+\[X^{2}-3X-4 \leq 0\]
+\[\text{Cherchons }\Delta.\]
+\[\Delta=25\]
+\[X_{1}=4 \text{ ; } X_{2}=-1\]
+\[X^{2}-3X-4 \leq 0 \implies X\in [-1;4] \implies e^{x}\in [-1;4] \implies e^{x}\in [0;4]\]
+\[\text{Posons } f(x)=e^{x}.\quad f(x)\in ]0;4]\implies x\in f(]0;4])^{-1}\]
+\[f(]0;4])^{-1}=]\lim_{x \to 0^{+}}\ln(x);\lim_{x \to 4}\ln(x)] \text{ car }f(x)=e^{x}\]
+\[x\in ]-\infty; \ln(4)]\]
+\[ \textcolor{green}{\boxed{S=\left] -\infty; \ln(4)\right] }} \]
+\end{enumerate}
 %\item \[ \text{Résoudre dans } \mathbb{R}^{2} \text{ le système }
 %\begin{cases}
 %\ln x + \ln y = \ln 2\\
