Fin de la résolution du système

--- a/1erTourBacL2024Correction.tex
+++ b/1erTourBacL2024Correction.tex
@@ -265,7 +265,8 @@ x= 3-y
 x-y+z = -2\\
 2x+y-2z = 6\\
 x-3y-z=-4
-\end{cases}  \textbf{(01 point)}\]
+\end{cases}  \textbf{(01 point)}
+\]
 
 \[
 \begin{cases}
@@ -283,23 +284,29 @@ L'3=L1-L3
 \[
 \begin{cases}
 x-y+z = -2\quad L1\\
-\quad -3y-2z = -10\quad L'2\\
-\quad\quad 2y+2z =-2\quad L'3
-\end{cases}\text{En choisissant } L'2 \text{ comme pivot on a:}
+\quad -3y+4z = -10\quad L'2\\
+\quad\quad 2y+2z =2\quad L'3
+\end{cases} L'2 \text{ comme pivot on a:}
 \begin{cases}
 x-y+z = -2\quad L1\\
--3y-2z = 6\quad L'2\\
-L''3=L'2+L'3
+-3y+4z = -10\quad L'2\\
+L''3=2L'2+3L'3
 \end{cases}\text{donc}
 \]
 
 \[
 \begin{cases}
 x-y+z = -2\quad L1\\
--3y-2z = -10\quad L'2\\
-\quad y\quad\quad\quad=12
+-3y+4z = -10\quad L'2\\
+\quad\quad\quad z=-1\quad L''3
+\end{cases}\implies
+\begin{cases}
+x= 1\quad L1\\
+y = 2\quad L'2\\
+z=-1\quad L''3
 \end{cases}
 \]
+\[\textcolor{green}{\boxed{S=\left\lbrace \left(1, 2, -1  \right) \right\rbrace }}\]
 %\item \[ \text{En déduire la résolution du système }
 %\begin{cases}
 %\ln x-\ln y+\ln z = -2\\
