Fin de la résolution du dernier système

--- a/1erTourBacL2024Correction.tex
+++ b/1erTourBacL2024Correction.tex
@@ -307,12 +307,49 @@ z=-1\quad L''3
 \end{cases}
 \]
 \[\textcolor{green}{\boxed{S=\left\lbrace \left(1, 2, -1  \right) \right\rbrace }}\]
-%\item \[ \text{En déduire la résolution du système }
-%\begin{cases}
-%\ln x-\ln y+\ln z = -2\\
-%\ln x^{2}+\ln y-\ln z^{2} = 6\\
-%\ln x-\ln y^{3}-\ln z=-4
-%\end{cases}  \textbf{(01 point)}\]
+\item \[ \text{En déduire la résolution du système }
+\begin{cases}
+\ln x-\ln y+\ln z = -2\\
+\ln x^{2}+\ln y-\ln z^{2} = 6\\
+\ln x-\ln y^{3}-\ln z=-4
+\end{cases}  \textbf{(01 point)}\]
+
+\[
+\begin{cases}
+\ln x-\ln y+\ln z = -2\\
+\ln x^{2}+\ln y-\ln z^{2} = 6\\
+\ln x-\ln y^{3}-\ln z=-4
+\end{cases} \text{ Posons }
+\begin{cases}
+X =\ln x\\
+Y =\ln y\\
+Z =\ln z
+\end{cases}\implies
+\begin{cases}
+X-Y+Y = -2\\
+2X+Z-2Z = 6\\
+X-3Y-Z=-4
+\end{cases}\text{ donc }
+\]
+
+\[
+\begin{cases}
+X= 1\\
+Y= 2\\
+Z=-1
+\end{cases}\implies
+\begin{cases}
+1 =\ln x\\
+2 =\ln y\\
+-1 =\ln z 
+\end{cases}\implies
+\begin{cases}
+x=e\\
+y=e^{2}\\
+z=e^{-1}
+\end{cases}
+\]
+\[\textcolor{green}{\boxed{S=\left\lbrace \left(e, e^{2}, e^{-1}\right) \right\rbrace }}\]
 \end{enumerate}
 \end{enumerate}
 %\section*{\textcolor{green}{\underline{Problème (10 points):}}}
