Domaine de définition

--- a/1erTourBacL2024Correction.tex
+++ b/1erTourBacL2024Correction.tex
@@ -352,5 +352,32 @@ z=e^{-1}
 \[\textcolor{green}{\boxed{S=\left\lbrace \left(e, e^{2}, e^{-1}\right) \right\rbrace }}\]
 \end{enumerate}
 \end{enumerate}
-%\section*{\textcolor{green}{\underline{Problème (10 points):}}}
+\section*{\textcolor{green}{\underline{Problème (10 points):}}}
+Soit la fonction numérique $f$ de la variable réelle $x$, définie par $f(x)=\frac{1+\ln x}{x}$ et $(\mathscr{Cf})$ et sa courbe représentative dans un repère orthonormé $(O;\vec{i};\vec{j})$ d'unité graphique 1 cm.
+\begin{enumerate}
+\item 
+\begin{itemize}
+\item[a.] Déterminons l'ensemble  de définition $Df$
+
+$f$ existe ssi $x>0$
+
+$$\textcolor{green}{\boxed{Df=\mathbb{R}^{*}}}$$
+
+Calculons les limites aux bornes  de $Df$.
+%\item[b.] Iterpréter graphiquement les résultats obtenus. \textbf{(01 point)}
+\end{itemize}
+\item 
+%\begin{itemize}
+%\item[a.] Résoudre dans $\mathbb{R}$ l'inéquation $\ln x \leq 0$. \textbf{(0,75 point)}
+%\item[b.] Montrer que la dérivée de $f$ est définie pour tout $x>0$, par $f'(x)=\frac{-\ln x}{x}$, puis étudier son signe.\textbf{(01 point)}
+%\item[c.] Dresser le tableau de variation de $f$ \textbf{(01 point)}
+%\end{itemize}
+%\item Etudier $(\mathscr{Cf})$ l'intersection de avec l'axe des abscisses. \textbf{(01 point)}
+%\item Tracer la courbe de $(\mathscr{Cf})$.  \textbf{(01,75 point)}
+%\item Soit  la fonction F définie par $F(x)=\frac{1}{2}(\ln x)^{2}+\ln x.$
+%\begin{itemize}
+%\item[a.] Montrer que $F$ est une primitive de $f$ dans $]0; +\infty[$ \textbf{(01 point)}
+%\item[b.] Calculer en $cm^{2}$ l'aire $\mathscr{A}$ du domaine plan délimité par la courbe $(\mathscr{Cf})$, l'axe des abscisses, ainsi que les droites $(D_{1}): x=1$ et $(D_{2}): x=e$. \textbf{(01 point)}
+%\end{itemize}
+\end{enumerate}
 \end{document}
