Y'avait une erreur sur le domaine de définition

--- a/1erTourBacL2024Correction.tex
+++ b/1erTourBacL2024Correction.tex
@@ -361,9 +361,9 @@ Soit la fonction numérique $f$ de la variable réelle $x$, définie par $f(x)=\
 
 $f$ existe ssi $x>0$
 
-$$\textcolor{green}{\boxed{Df=\mathbb{R}^{*}}}$$
+$$\textcolor{green}{\boxed{Df=\mathbb{R}^{*}_{+}}}$$
 
-Calculons les limites aux bornes  de $Df$.
+%Calculons les limites aux bornes  de $Df$.
 %\item[b.] Iterpréter graphiquement les résultats obtenus. \textbf{(01 point)}
 \end{itemize}
 \item 
