--- a/1erTourBacL2024Correction.tex
+++ b/1erTourBacL2024Correction.tex
@@ -363,7 +363,20 @@ $f$ existe ssi $x>0$
 
 $$\textcolor{green}{\boxed{Df=\mathbb{R}^{*}_{+}}}$$
 
-%Calculons les limites aux bornes  de $Df$.
+Calculons les limites aux bornes  de $Df$
+
+Les bornes de $Df$ sont $0$ et $+\infty$
+\begin{itemize}
+\item En $0$
+\[
+\lim_{x \to 0^{+}}f(x)=\lim_{x \to 0^{+}}\frac{1+\ln x}{x}=\lim_{x \to 0^{+}}\frac{1}{x}+\frac{\ln(x)}{x}:\begin{cases}
+\lim_{x \to 0^{+}}\frac{1}{x}=+\infty\\
+\lim_{x \to 0^{+}}\frac{\ln(x)}{x}=0
+\end{cases} \text{ Par Somme,}
+\]
+$$\textcolor{green}{\boxed{\lim_{x \to 0^{+}}f(x)=+\infty}}$$
+%\item En $+\infty$
+\end{itemize}
 %\item[b.] Iterpréter graphiquement les résultats obtenus. \textbf{(01 point)}
 \end{itemize}
 \item 
