calcule de la limite en +\infty

--- a/1erTourBacL2024Correction.tex
+++ b/1erTourBacL2024Correction.tex
@@ -375,14 +375,14 @@ Les bornes de $Df$ sont $0$ et $+\infty$
 \end{cases} \text{ Par produit,}
 \]
 $$\textcolor{green}{\boxed{\lim_{x \to 0^{+}}f(x)=-\infty}}$$
-%\item En $+\infty$
-%\[
-%\lim_{x \to +\infty}f(x)=\lim_{x \to +\infty}\frac{1+\ln x}{x}=\lim_{x \to +\infty}\frac{1}{x}+\frac{\ln(x)}{x}:%%\begin{cases}
-%\lim_{x \to +\infty}\frac{1}{x}=0\\
-%\lim_{x \to +\infty}\frac{\ln(x)}{x}=0
-%\end{cases} \text{ Par Somme,}
-%\]
-%$$\textcolor{green}{\boxed{\lim_{x \to 0^{+}}f(x)=0}}$$
+\item En $+\infty$
+\[
+\lim_{x \to +\infty}f(x)=\lim_{x \to +\infty}\frac{1+\ln x}{x}=\lim_{x \to +\infty}\frac{1}{x}+\frac{\ln(x)}{x}:\begin{cases}
+\lim_{x \to +\infty}\frac{1}{x}=0\\
+\lim_{x \to +\infty}\frac{\ln(x)}{x}=0
+\end{cases} \text{ Par Somme,}
+\]
+$$\textcolor{green}{\boxed{\lim_{x \to 0^{+}}f(x)=0}}$$
 \end{itemize}
 %\item[b.] Iterpréter graphiquement les résultats obtenus. \textbf{(01 point)}
 \end{itemize}
