Interprétation des résultats des limites

--- a/1erTourBacL2024Correction.tex
+++ b/1erTourBacL2024Correction.tex
@@ -382,11 +382,15 @@ $$\textcolor{green}{\boxed{\lim_{x \to 0^{+}}f(x)=-\infty}}$$
 \lim_{x \to +\infty}\frac{\ln(x)}{x}=0
 \end{cases} \text{ Par Somme,}
 \]
-$$\textcolor{green}{\boxed{\lim_{x \to 0^{+}}f(x)=0}}$$
+$$\textcolor{green}{\boxed{\lim_{x \to +\infty}f(x)=0}}$$
 \end{itemize}
-%\item[b.] Iterpréter graphiquement les résultats obtenus. \textbf{(01 point)}
+\item[b.] Iterprétons graphiquement les résultats obtenus. \textbf{(01 point)}
+\textcolor{green}{
+$$\text{Comme }\lim_{x \to 0^{+}}f(x)=-\infty \text{ donc } x=0 \text{ est une asymptot verticale.}$$
+$$\text{Comme }\lim_{x \to +\infty}f(x)=0 \text{ donc } y=0 \text{ est une asymptot horizontale.}$$
+}
 \end{itemize}
-\item 
+%\item 
 %\begin{itemize}
 %\item[a.] Résoudre dans $\mathbb{R}$ l'inéquation $\ln x \leq 0$. \textbf{(0,75 point)}
 %\item[b.] Montrer que la dérivée de $f$ est définie pour tout $x>0$, par $f'(x)=\frac{-\ln x}{x}$, puis étudier son signe.\textbf{(01 point)}
