A la question 2.a, j'ai résolu l'inéquation

--- a/1erTourBacL2024Correction.tex
+++ b/1erTourBacL2024Correction.tex
@@ -390,12 +390,16 @@ $$\text{Comme }\lim_{x \to 0^{+}}f(x)=-\infty \text{ donc } x=0 \text{ est une a
 $$\text{Comme }\lim_{x \to +\infty}f(x)=0 \text{ donc } y=0 \text{ est une asymptot horizontale.}$$
 }
 \end{itemize}
-%\item 
-%\begin{itemize}
-%\item[a.] Résoudre dans $\mathbb{R}$ l'inéquation $\ln x \leq 0$. \textbf{(0,75 point)}
-%\item[b.] Montrer que la dérivée de $f$ est définie pour tout $x>0$, par $f'(x)=\frac{-\ln x}{x}$, puis étudier son signe.\textbf{(01 point)}
+\item 
+\begin{itemize}
+\item[a.] Résolvons dans $\mathbb{R}$ l'inéquation $\ln x \leq 0$. \textbf{(0,75 point)}
+
+$$\ln x \leq 0\implies x\in]0; 1]$$
+
+$$\textcolor{green}{\boxed{S=]0; 1]}}$$
+%\item[b.] Montrons que la dérivée de $f$ est définie pour tout $x>0$, par $f'(x)=\frac{-\ln x}{x}$, puis étudier son signe.\textbf{(01 point)}
 %\item[c.] Dresser le tableau de variation de $f$ \textbf{(01 point)}
-%\end{itemize}
+\end{itemize}
 %\item Etudier $(\mathscr{Cf})$ l'intersection de avec l'axe des abscisses. \textbf{(01 point)}
 %\item Tracer la courbe de $(\mathscr{Cf})$.  \textbf{(01,75 point)}
 %\item Soit  la fonction F définie par $F(x)=\frac{1}{2}(\ln x)^{2}+\ln x.$
