Erreur de rédaction en 2. b.

--- a/1erTourBacL2024.tex
+++ b/1erTourBacL2024.tex
@@ -102,7 +102,7 @@ Soit la fonction numérique $f$ de la variable réelle $x$, définie par $f(x)=\
 \item 
 \begin{itemize}
 \item[a.] Résoudre dans $\mathbb{R}$ l'inéquation $\ln x \leq 0$. \textbf{(0,75 point)}
-\item[b.] Montrer que la dérivée de $f$ est définie pour tout $x>0$, par $f'(x)=\frac{-\ln x}{x}$, puis étudier son signe.\textbf{(01 point)}
+\item[b.] Montrer que la dérivée de $f$ est définie pour tout $x>0$, par $f'(x)=\frac{-\ln x}{x^{2}}$, puis étudier son signe.\textbf{(01 point)}
 \item[c.] Dresser le tableau de variation de $f$ \textbf{(01 point)}
 \end{itemize}
 \item Etudier $(\mathscr{Cf})$ l'intersection de avec l'axe des abscisses. \textbf{(01 point)}
