A la question 2.a, j'ai démontré la forme de la dérivé

--- a/1erTourBacL2024Correction.tex
+++ b/1erTourBacL2024Correction.tex
@@ -397,7 +397,10 @@ $$\text{Comme }\lim_{x \to +\infty}f(x)=0 \text{ donc } y=0 \text{ est une asymp
 $$\ln x \leq 0\implies x\in]0; 1]$$
 
 $$\textcolor{green}{\boxed{S=]0; 1]}}$$
-%\item[b.] Montrons que la dérivée de $f$ est définie pour tout $x>0$, par $f'(x)=\frac{-\ln x}{x}$, puis étudier son signe.\textbf{(01 point)}
+\item[b.] Montrons que la dérivée de $f$ est définie pour tout $x>0$, par $f'(x)=\frac{-\ln x}{x^{2}}$ \textbf{(0,5 point)}
+$$ f(x)=\frac{1+\ln x}{x} $$
+$$ f'(x)=\frac{(1+\ln x)'x+(1+\ln x)x'}{x^{2}}=\frac{1-(1+\ln x)}{x^{2}}=\frac{-\ln x}{x^{2}} $$
+%Etudier son signe.\textbf{(0,5 point)}
 %\item[c.] Dresser le tableau de variation de $f$ \textbf{(01 point)}
 \end{itemize}
 %\item Etudier $(\mathscr{Cf})$ l'intersection de avec l'axe des abscisses. \textbf{(01 point)}
