--- a/1erTourBacL2024Correction.tex
+++ b/1erTourBacL2024Correction.tex
@@ -400,7 +400,22 @@ $$\textcolor{green}{\boxed{S=]0; 1]}}$$
 \item[b.] Montrons que la dérivée de $f$ est définie pour tout $x>0$, par $f'(x)=\frac{-\ln x}{x^{2}}$ \textbf{(0,5 point)}
 $$ f(x)=\frac{1+\ln x}{x} $$
 $$ f'(x)=\frac{(1+\ln x)'x+(1+\ln x)x'}{x^{2}}=\frac{1-(1+\ln x)}{x^{2}}=\frac{-\ln x}{x^{2}} $$
-%Etudier son signe.\textbf{(0,5 point)}
+$$ \text{Donc }f'(x)=\frac{-\ln x}{x^{2}} \text{Cqfd } $$
+Etudions son signe.\textbf{(0,5 point)}
+
+Le signe de $f$ dépend du numérateur car $x^{2}>0$ or 
+
+$\forall x\in]0; 1]$, $\ln x <0\implies -\ln x >0$ donc $\forall x\in]0; 1], f'(x)\leq 0$
+
+$\forall x\in[1; +\infty[$, $\ln x >0\implies -\ln x <0$ donc $\forall x\in]1; +\infty[, f'(x)\geq 0$
+
+\textbf{En résumé}
+\textcolor{green}{
+\begin{itemize}
+\item $\forall x\in]0; 1], f'(x)\leq 0$
+\item $\forall x\in]1; +\infty[, f'(x)\geq 0$
+\end{itemize}
+}
 %\item[c.] Dresser le tableau de variation de $f$ \textbf{(01 point)}
 \end{itemize}
 %\item Etudier $(\mathscr{Cf})$ l'intersection de avec l'axe des abscisses. \textbf{(01 point)}
