--- a/1erTourBacL2024Correction.tex
+++ b/1erTourBacL2024Correction.tex
@@ -405,18 +405,25 @@ Etudions son signe.\textbf{(0,5 point)}
 
 Le signe de $f$ dépend du numérateur car $x^{2}>0$ or 
 
-$\forall x\in]0; 1]$, $\ln x <0\implies -\ln x >0$ donc $\forall x\in]0; 1], f'(x)\leq 0$
+$\forall x\in]0; 1]$, $\ln x <0\implies -\ln x >0$ donc $\forall x\in]0; 1], f'(x)\geq 0$
 
-$\forall x\in[1; +\infty[$, $\ln x >0\implies -\ln x <0$ donc $\forall x\in]1; +\infty[, f'(x)\geq 0$
-
+$\forall x\in[1; +\infty[$, $\ln x >0\implies -\ln x <0$ donc $\forall x\in]1; +\infty[, f'(x)\leq 0$
+\newpage
 \textbf{En résumé}
 \textcolor{green}{
 \begin{itemize}
-\item $\forall x\in]0; 1], f'(x)\leq 0$
-\item $\forall x\in]1; +\infty[, f'(x)\geq 0$
+\item $\forall x\in]0; 1], f'(x)\geq 0$ donc f est décroissante
+\item $\forall x\in]1; +\infty[, f'(x)\leq 0$ donc f est croissante
 \end{itemize}
 }
-%\item[c.] Dresser le tableau de variation de $f$ \textbf{(01 point)}
+%\item[c.] Dressons le tableau de variation de $f$ \textbf{(01 point)}
+
+%\begin{tikzpicture}
+% \tkzTabInit{$x$/1,$f'$/1,$f$/2}{$0$,$1$,$+\infty$}
+% \tkzTabLine{,+,z,-}
+% \tkzTabVar{-/$-\infty$,+/$1$,-/$0$}
+ %\tkzTabVal{2}{4}{0.8}{$0$}{$0$}
+%\end{tikzpicture}
 \end{itemize}
 %\item Etudier $(\mathscr{Cf})$ l'intersection de avec l'axe des abscisses. \textbf{(01 point)}
 %\item Tracer la courbe de $(\mathscr{Cf})$.  \textbf{(01,75 point)}
