--- a/1erTourBacL2024Correction.tex
+++ b/1erTourBacL2024Correction.tex
@@ -416,14 +416,13 @@ $\forall x\in[1; +\infty[$, $\ln x >0\implies -\ln x <0$ donc $\forall x\in]1; +
 \item $\forall x\in]1; +\infty[, f'(x)\leq 0$ donc f est croissante
 \end{itemize}
 }
-%\item[c.] Dressons le tableau de variation de $f$ \textbf{(01 point)}
+\item[c.] Dressons le tableau de variation de $f$ \textbf{(01 point)}
 
-%\begin{tikzpicture}
-% \tkzTabInit{$x$/1,$f'$/1,$f$/2}{$0$,$1$,$+\infty$}
-% \tkzTabLine{,+,z,-}
-% \tkzTabVar{-/$-\infty$,+/$1$,-/$0$}
- %\tkzTabVal{2}{4}{0.8}{$0$}{$0$}
-%\end{tikzpicture}
+\begin{tikzpicture}
+\tkzTabInit{$x$/1,$f'$/1,$f$/2}{$0$,$1$,$+\infty$}
+\tkzTabLine{,+,z,-}
+\tkzTabVar{-/$-\infty$,+/$1$,-/$0$}
+\end{tikzpicture}
 \end{itemize}
 %\item Etudier $(\mathscr{Cf})$ l'intersection de avec l'axe des abscisses. \textbf{(01 point)}
 %\item Tracer la courbe de $(\mathscr{Cf})$.  \textbf{(01,75 point)}
