Point d'intersection de la courbe avec l'axe des abscisses

--- a/1erTourBacL2024Correction.tex
+++ b/1erTourBacL2024Correction.tex
@@ -424,7 +424,14 @@ $\forall x\in[1; +\infty[$, $\ln x >0\implies -\ln x <0$ donc $\forall x\in]1; +
 \tkzTabVar{-/$-\infty$,+/$1$,-/$0$}
 \end{tikzpicture}
 \end{itemize}
-%\item Etudier $(\mathscr{Cf})$ l'intersection de avec l'axe des abscisses. \textbf{(01 point)}
+\item Etudions $(\mathscr{Cf})$ l'intersection de avec l'axe des abscisses. \textbf{(01 point)}
+
+la courbe $(\mathscr{Cf})$ rencontre l'axe des abscisse ssi $f(x)=0$
+
+$$ f(x)=0\implies \frac{1+\ln x}{x}=0\implies x=e^{-1} $$
+
+Donc $(\mathscr{Cf})$ rencontre l'axe des abscisses au point $x=e^{-1}$
+
 %\item Tracer la courbe de $(\mathscr{Cf})$.  \textbf{(01,75 point)}
 %\item Soit  la fonction F définie par $F(x)=\frac{1}{2}(\ln x)^{2}+\ln x.$
 %\begin{itemize}
