Construction de la courbe

--- a/1erTourBacL2024Correction.tex
+++ b/1erTourBacL2024Correction.tex
@@ -432,7 +432,13 @@ $$ f(x)=0\implies \frac{1+\ln x}{x}=0\implies x=e^{-1} $$
 
 Donc $(\mathscr{Cf})$ rencontre l'axe des abscisses au point $x=e^{-1}$
 
-%\item Tracer la courbe de $(\mathscr{Cf})$.  \textbf{(01,75 point)}
+\item Traçons la courbe de $(\mathscr{Cf})$.  \textbf{(01,75 point)}
+\begin{figure}[h]
+\centering
+\includegraphics[width=0.8\textwidth]{courbe1-2024.png}
+\caption{Courbe de (Cf)}
+\label{fig:monimage}
+\end{figure}
 %\item Soit  la fonction F définie par $F(x)=\frac{1}{2}(\ln x)^{2}+\ln x.$
 %\begin{itemize}
 %\item[a.] Montrer que $F$ est une primitive de $f$ dans $]0; +\infty[$ \textbf{(01 point)}
