J'ai démontré que F'=f

--- a/1erTourBacL2024Correction.tex
+++ b/1erTourBacL2024Correction.tex
@@ -439,10 +439,16 @@ Donc $(\mathscr{Cf})$ rencontre l'axe des abscisses au point $x=e^{-1}$
 \caption{Courbe de (Cf)}
 \label{fig:monimage}
 \end{figure}
-%\item Soit  la fonction F définie par $F(x)=\frac{1}{2}(\ln x)^{2}+\ln x.$
-%\begin{itemize}
-%\item[a.] Montrer que $F$ est une primitive de $f$ dans $]0; +\infty[$ \textbf{(01 point)}
+\item Soit  la fonction F définie par $F(x)=\frac{1}{2}(\ln x)^{2}+\ln x.$
+\begin{itemize}
+\item[a.] Montrons que $F$ est une primitive de $f$ dans $]0; +\infty[$ \textbf{(01 point)}
+
+$F$ est une primitive de $f$ ssi $F'=f$
+
+$F'(x)=\frac{\ln x}{x}+\frac{1}{x}=\frac{\ln x + 1 }{x}=f(x).$
+
+Donc  $F$ est bien une primitive de $f$
 %\item[b.] Calculer en $cm^{2}$ l'aire $\mathscr{A}$ du domaine plan délimité par la courbe $(\mathscr{Cf})$, l'axe des abscisses, ainsi que les droites $(D_{1}): x=1$ et $(D_{2}): x=e$. \textbf{(01 point)}
-%\end{itemize}
+\end{itemize}
 \end{enumerate}
 \end{document}
