Je m'étais trompé sur l'expression de la fonction en trançant la courbe sur géogébra

--- a/1erTourBacL2024Correction.tex
+++ b/1erTourBacL2024Correction.tex
@@ -455,7 +455,7 @@ Donc  $F$ est bien une primitive de $f$
  								&= \frac{1}{2}(\ln e)^{2}+\ln e-\left[\frac{1}{2}(\ln 1)^{2}+\ln 1 \right]\\
  								&=\frac{3}{2}
 \end{align*}
-$$\textcolor{green}{\boxed{\int_{1}^{e}f(x)=\frac{3}{2}}}$$
+$$\textcolor{green}{\boxed{\int_{1}^{e}f(x)=\frac{3}{2}\quad \text{cm}^{2} }}$$
 \end{itemize}
 \end{enumerate}
 \end{document}
