aire de la courbe

--- a/1erTourBacL2024Correction.tex
+++ b/1erTourBacL2024Correction.tex
@@ -456,6 +456,12 @@ Donc  $F$ est bien une primitive de $f$
  								&=\frac{3}{2}
 \end{align*}
 $$\textcolor{green}{\boxed{\int_{1}^{e}f(x)=\frac{3}{2}\quad \text{cm}^{2} }}$$
+\begin{figure}[h]
+\centering
+\includegraphics[width=0.8\textwidth]{aire2024.png}
+\caption{Courbe de (Cf)}
+\label{fig:monimage}
+\end{figure}
 \end{itemize}
 \end{enumerate}
 \end{document}
