Ajout du lien menr sur géogébra pour voir la courbe

--- a/1erTourBacL2024Correction.tex
+++ b/1erTourBacL2024Correction.tex
@@ -5,7 +5,7 @@
 
 \usepackage[french]{babel}
 \usepackage[T1]{fontenc}
-\usepackage{hyperref}
+\usepackage[colorlinks=true, linkcolor=blue, urlcolor=blue, citecolor=blue]{hyperref}
 \usepackage{verbatim}
 
 \usepackage{color, soul}
@@ -463,5 +463,6 @@ $$\textcolor{green}{\boxed{\int_{1}^{e}f(x)=\frac{3}{2}\quad \text{cm}^{2} }}$$
 \label{fig:monimage}
 \end{figure}
 \end{itemize}
+\href{https://www.geogebra.org/classic/kdbk8kpp}{Clique ici pour voir la figure sur géogébra}
 \end{enumerate}
 \end{document}
